cli/tests/snapshots/integration__run_images@polygon1.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="70.0" height="40.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 10.0 20.0 L 0.0 40.0 L 70.0 20.0 L 0.0 0.0 Z" fill="rgba(222, 184, 135, 1.0)" />
</svg>
