cli/tests/snapshots/integration__run_images@polygon3.gleam.snap
---
source: cli/tests/integration.rs
---
<svg width="40.0" height="60.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 0.0 L 0.0 40.0 L 20.0 40.0 L 20.0 60.0 L 40.0 60.0 L 40.0 20.0 L 20.0 20.0 L 20.0 0.0 Z" fill="rgba(221, 160, 221, 1.0)" />
</svg>
